update UI issue on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(236, 236, 236);
   min-height: 100vh;
-  width: 100%;
 }
 
 code {
@@ -15,3 +14,10 @@ code {
     monospace;
 }
 
+@media screen and (max-width: 800px) {
+  body {
+    min-width: 100%;
+    padding: 0;
+    overflow-x: hidden; 
+  }
+}
